--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html ng-app="❤️">
 <head>
-  <title></title>
+  <title>❤️❤️❤️</title>
   <style src="app.css"></style>
   <script src="app.js"></script>
-</head>
-<body ng-view>
-  <img src="apple2e.png">
-  👴
+  <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+  <script>      
+      function init() {
+        var stage = new createjs.Stage("gameCanvas");
+        var image = new createjs.Bitmap("apple2e.png");
+ 		stage.addChild(image);
 
+        var circle = new createjs.Shape();
+        circle.graphics.beginFill("Crimson").drawCircle(0, 0, 50);
+        circle.x = 100;
+        circle.y = 100;
+        stage.addChild(circle);
+        createjs.Tween.get(circle, {loop: true})
+          .to({x: 400}, 1000, createjs.Ease.getPowInOut(4))
+          .to({alpha: 0, y: 75}, 500, createjs.Ease.getPowInOut(2))
+          .to({alpha: 0, y: 125}, 100)
+          .to({alpha: 1, y: 100}, 500, createjs.Ease.getPowInOut(2))
+          .to({x: 100}, 800, createjs.Ease.getPowInOut(2));
+        createjs.Ticker.setFPS(60);
+        createjs.Ticker.addEventListener("tick", stage);
+      }
+    </script>
+</head>
+<body ng-view onload="init();">
+  <!-- <img src="apple2e.png"> -->
+  👴
+  <canvas id="gameCanvas" width="700" height="500"></canvas>
 </body>
 </html>
